# my-docs

./: .gitignore
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  daily_report.md  documentation.md
.github/PULL_REQUEST_TEMPLATE/: daily_report.md  documentation.md
books/: 君たちはどう生きるか.md
dailyReports/: 2023_08.md
docs/: Ubuntu.md  WebStorm.md
docs/Docker/: README.md
docs/Git/: README.md
docs/Javascript/Typescript/: README.md
docs/Ruby/Rails/: create_app.md
docs/Ruby/Rails/realworld/: docker-compose.yml  entrypoint.sh
docs/Ruby/Rails/realworld/docker/app/: Dockerfile
docs/Rust/: README.md
docs/Rust/axum/: .env.example  Cargo.toml  Makefile  README.md  docker-compose.yml
docs/Rust/axum/docker/api/: Dockerfile
docs/Rust/axum/docker/db/: Dockerfile
docs/Rust/axum/migrations/: 20230609154020_init.sql
docs/Rust/axum/src/: core.rs  main.rs
docs/Rust/axum/src/api/: handler.rs
docs/Rust/axum/src/api/handler/: article.rs
docs/Rust/axum/src/api/handler/article/: article_handler.rs
docs/Rust/axum/src/api/request/article/: create_article_request.rs
docs/Rust/axum/src/core/domain/: article.rs
docs/Rust/axum/src/core/domain/article/: article.rs  article_repository.rs
docs/Rust/axum/src/core/infrastructure/repository/: article.rs
docs/Rust/axum/src/core/infrastructure/repository/article/: article_repository.rs
docs/TeamDev/: README.md
docs/javascript/t3-stack/: package.json  pnpm-lock.yaml
gerunda/: about.md
