[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

[features]
default = ["database-test"]
database-test = []

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version="0.3.17", features = ["env-filter"] }
