[package]
name = "axum-demo"
version = "0.1.0"
edition = "2021"

[features]
default = ["database-test"]
database-test = []

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version="0.3.17", features = ["env-filter"] }
anyhow = "1.0.75"
http-body = "0.4.5"
validator = { version = "0.16.1", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "any", "postgres"] }
dotenv = "0.15.0"
tower-http = { version = "0.4.4", features = ["cors"] }
